CNCS Dev 12/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOFA_Approval_Workflow_Setup__c</fullName>
        <label>NOFA Approval Workflow Setup?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Corporate Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Corporate Programs</relationshipLabel>
        <relationshipName>Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>